--- a/playbooks/install-package.yml
+++ b/playbooks/install-package.yml
@@ -1,8 +1,17 @@
 ---
   - name: Install package
     hosts: all
-    gather_facts: False
+    gather_facts: True
 
     tasks:
-      - debug:
-          var: hostvars[inventory_hostname]
+      - name: Distribution
+        debug: 
+          var: ansible_distribution
+
+      - name: Distribution version
+        debug: 
+          var: ansible_distribution_version
+
+      - name: Distribution major version
+        debug: 
+          var: ansible_distribution_major_version
