--- a/playbooks/cleanup.yml
+++ b/playbooks/cleanup.yml
@@ -1,7 +1,7 @@
 ---
   - name: Cleanup /tmp directory (inside docker containers)
     hosts: all
-    gather_facts: False
+    gather_facts: True
 
     tasks:
       - debug:
