--- a/playbooks/cleanup.yml
+++ b/playbooks/cleanup.yml
@@ -1,6 +1,7 @@
 ---
   - name: Cleanup /tmp directory (inside docker containers)
     hosts: all
+    become: True
     gather_facts: True
 
     tasks:
