--- a/playbooks/cleanup.yml
+++ b/playbooks/cleanup.yml
@@ -18,7 +18,7 @@
           - name: set Python interpreter
             set_fact:
               ansible_python_interpreter: "/usr/bin/python3"
-        when: ansible_python_version | version('3', '<')
+        when: ansible_python_version is version('3', '<')
 
       - name: get docker containers
         docker_host_info:
