--- a/playbooks/cleanup.yml
+++ b/playbooks/cleanup.yml
@@ -32,6 +32,8 @@
       - name: get docker containers
         docker_host_info:
           containers: yes
+          container_filters:
+            name: "ecs-rapidminer-agent*"
         register: result
 
       - name: show output
