--- a/playbooks/cleanup.yml
+++ b/playbooks/cleanup.yml
@@ -34,7 +34,7 @@
         docker_host_info:
           containers: yes
           containers_filters:
-            image: "325855013273.dkr.ecr.eu-central-1.amazonaws.com/rapidminer-agent:*"
+            ancestor: "325855013273.dkr.ecr.eu-central-1.amazonaws.com/rapidminer-agent:*"
         register: result
 
       - name: show output
