--- a/playbooks/cleanup.yml
+++ b/playbooks/cleanup.yml
@@ -50,16 +50,17 @@
           container_id: "{{ result.containers.0.Id }}"
           container_name: "{{ result.containers.0.Names.0 | regex_replace('^\\/', '')}}"
 
-      - debug:
-          var: container_name
+      # - name: cleanup /tmp directory _inside_ docker container
+      #   docker_exec:
+      #     name: "{{ container_name }}"
+      #     command: bash -c '/usr/bin/find /tmp/wsdl* -type f -atime +1 -exec rm -f {} \; 2>/dev/null'
+      #   register: out
 
       - name: cleanup /tmp directory _inside_ docker container
-        docker_exec:
-          name: "{{ container_name }}"
-          command: bash -c '/usr/bin/find /tmp/wsdl* -type f -atime +1 -exec rm -f {} \; 2>/dev/null'
+        command: docker exec -ti {{ container_id }} bash -c "du -h --exclude=./mnt --exclude=./proc --max-depth=1 . | grep '[0-9]G\>\' | sort -hr"
         register: out
-
+      
       - debug:
           var: out
-
+      
 
