--- a/playbooks/add-domain-user.yml
+++ b/playbooks/add-domain-user.yml
@@ -8,7 +8,10 @@
 
     tasks:
       - set_fact:
-          account_name: "{{ full_name | default((firstname + surname) | map('trim') | lower) }}"
+          account_name: "{{ full_name | default((firstname + surname) | replace(' ','') | lower) }}"
+
+      - debug:
+          var: account_name
 
       - win_domain_user:
           name: "{{ account_name }}"
