--- a/playbooks/postgres/add_user.yml
+++ b/playbooks/postgres/add_user.yml
@@ -31,7 +31,7 @@
           login_user: "{{ db_admin_user }}"
           login_password: "{{ db_admin_password }}"
           query: |
-            select * from pg_users
+            select * from pg_user
         register: db_query_result
 
       - debug:
