--- a/playbooks/postgres/add_user.yml
+++ b/playbooks/postgres/add_user.yml
@@ -32,6 +32,7 @@
           login_password: "{{ db_admin_password }}"
           query: |
             select * from pg_user
+            where usename = {{ new_db_user }}
         register: db_query_result
 
       - debug:
