--- a/playbooks/postgres/add_user.yml
+++ b/playbooks/postgres/add_user.yml
@@ -10,9 +10,6 @@
         register:
           rds_instance
 
-      - debug:
-          var: rds_instance.instances
-
       - name: set rds endpoint
         set_fact:
           db_host: "{{ item.address }}"
@@ -23,6 +20,8 @@
         assert:
           that:
             - db_host is defined
+          fail_msg: "RDS instance {{ db_instance_identifier }} not found."
+          quiet: true
       
       - name: check if user already exists
         postgresql_query:
@@ -41,6 +40,7 @@
           that:
             - db_query_result.rowcount == 0
           fail_msg: "User {{ new_db_user }} already exists in {{ db_instance_identifier }}"
+          quiet: true
 
       # - name: Add user
       #   postgresql_user:
