--- a/playbooks/postgres/add_user.yml
+++ b/playbooks/postgres/add_user.yml
@@ -22,27 +22,8 @@
             - db_host is defined
           fail_msg: "RDS instance {{ db_instance_identifier }} not found."
           quiet: true
-      
-      # - name: check if user already exists
-      #   postgresql_query:
-      #     login_host: "{{ db_host }}"
-      #     login_port: "{{ db_port|default(5432) }}"
-      #     login_db: "postgres"
-      #     login_user: "{{ db_admin_user }}"
-      #     login_password: "{{ db_admin_password }}"
-      #     query: |
-      #       select * from pg_user
-      #       where usename = '{{ new_db_user }}'
-      #   register: db_query_result
 
-      # - name: assert that new username does not exist in db
-      #   assert:
-      #     that:
-      #       - db_query_result.rowcount == 0
-      #     fail_msg: "User {{ new_db_user }} already exists in {{ db_instance_identifier }}"
-      #     quiet: true
-
-      - name: optionally create database (only when 'db_name' is defined)
+      - name: create database (only when 'db_name' is defined)
         postgresql_db:
           login_host: "{{ db_host }}"
           login_port: "{{ db_port|default(5432) }}"
@@ -72,11 +53,11 @@
           login_password: "{{ db_admin_password }}"
           database: "{{ db_name|default('postgres') }}"
           obj: public
+          type: schema
           privs: ALL
           roles: "{{ new_db_user }}"
           state: present
-          type: schema
-
+          
       - name: grant all privileges on database to owner
         postgresql_privs:
           login_host: "{{ db_host }}"
